[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/button_menu_start.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 2.8006
margin_top = -3.55933
margin_right = 1282.8
margin_bottom = 716.441
color = Color( 0.0117647, 0, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.254902, 0.254902, 0.254902, 1 )
text = "Test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_menu_start" type="Button" parent="."]
margin_left = 590.0
margin_top = 400.0
margin_right = 690.0
margin_bottom = 450.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.780392, 0.780392, 0.780392, 1 )
custom_colors/font_color_pressed = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
text = "Start"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddressField" type="LineEdit" parent="."]
margin_left = 520.0
margin_top = 285.0
margin_right = 640.0
margin_bottom = 315.0
text = "localhost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameField" type="LineEdit" parent="."]
margin_left = 590.0
margin_top = 325.0
margin_right = 710.0
margin_bottom = 355.0
rect_pivot_offset = Vector2( 100, 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordField" type="LineEdit" parent="."]
margin_left = 590.0
margin_top = 360.0
margin_right = 710.0
margin_bottom = 390.0
rect_pivot_offset = Vector2( 100, 15 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortField" type="LineEdit" parent="."]
margin_left = 652.0
margin_top = 285.0
margin_right = 710.0
margin_bottom = 315.0
text = "4000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unamelabel" type="Label" parent="."]
margin_left = 520.0
margin_top = 325.0
margin_right = 590.0
margin_bottom = 356.0
text = "Username"
valign = 1

[node name="pwlabel" type="Label" parent="."]
margin_left = 520.0
margin_top = 360.0
margin_right = 590.0
margin_bottom = 390.0
text = "Password"
valign = 1
[connection signal="pressed" from="button_menu_start" to="button_menu_start" method="_on_button_menu_start_pressed"]
